# Modular_Neural_Networks

./: 100imgGausianBatch20_009_rate.txt  10imgGausian.txt  10imgModel.txt  1mak0imgGausian.txt  3000imgModel.txt  CMakeLists.txt  LICENSE  Makefile  Makefile(old_build_system)  README.md  main.cpp  ml  netFile.txt  wget-log
lib/: activations.cpp  activations.h  cost.cpp  cost.h  dense.cpp  layer.cpp  matrixOperations.cpp  matrixOperations.h  mnist.cpp  network.cpp  network.h
lib/include/: dense.h  layer.h  matrixOperations.h  mnist.h
lib/src/: activations.cpp  cost.cpp  dense.cpp  layer.cpp  matrixOperations.cpp  mnist.cpp  network.cpp
